# shadow

./: setup.py
cmake_examples/case1_uselib/: CMakeLists.txt
cmake_examples/usestudentlib/: CMakeLists.txt
plugins/bitcoin/: CMakeLists.txt  example.xml
plugins/hello/: CMakeLists.txt
